--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,30 @@
 <body>
    <h1>Lasagna</h1> 
    <img src="../images/Lasagna">
+   <p>This lasagna recipe takes a little work, 
+    but it is so satisfying and filling that it's worth it!</p>
+    <h2>Lasagna Ingredients</h2>
+    <ul>
+        <li><strong>Meat</strong>: This super meaty lasagna has sweet Italian sausage 
+            and lean ground beef.</li><br>
+        <li><strong>Onion and garlic</strong>:  An onion and two cloves of garlic are 
+            cooked with the meat to add tons of flavor.</li><br>
+        <li><strong>Tomato products</strong>: You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li><br>
+        <li><strong>Sugar</strong>: Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li><br>
+        <li><strong>Spices and seasonings</strong>: This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li><br>
+        <li><strong>Lasagna noodles</strong>: Use store-bought or homemade lasagna noodles.</li><br>
+        <li><strong>Cheeses</strong>: Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li><br>
+        <li><strong>Egg</strong>: An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li><br>
+    </ul>
+    
+    <h2>Steps</h2>
+    <ol>
+        <li>Make the meat sauce.</li><br>
+        <li>Cook the noodles.</li><br>
+        <li>Make the ricotta mixture.</li><br>
+        <li>Layer the lasagna according to the recipe instructions.</li><br>
+        <li>Cover with foil and bake.</li><br>
+        <li>Let the lasagna rest before serving.</li>
+    </ol>
 </body>
 </html>
