--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-   <h1>Odin Recipes</h1> 
-   <a href="recipes/lasagna.html">Lasagna</a>
+  <h1>Odin Recipes</h1> 
+  <ul>
+    <li><a href="recipes/lasagna.html">Lasagna</a> 
+    <li><a href="recipes/yourrecipe.html">Recipe Title 2</a></li>
+    <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+  </ul>
 </body>
 </html>
