--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <h1>Odin Recipes</h1> 
   <ul>
     <li><a href="recipes/lasagna.html">Lasagna</a> 
-    <li><a href="recipes/yourrecipe.html">Recipe Title 2</a></li>
-    <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+    <li><a href="recipes/carbonara.html">Carbonara</a></li>
+    <li><a href="recipes/thaitomyum.html">Authenthic Tom Yum</a></li>
   </ul>
 </body>
 </html>
