Add return to main page feature

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
    <h1>Lasagna</h1> 
-   <img src="../images/lasagna">
+   <img src="../images/lasagna.jpg">
    <p>This lasagna recipe takes a little work, 
     but it is so satisfying and filling that it's worth it!</p>
     <h2>Lasagna Ingredients</h2>
@@ -33,5 +33,9 @@
         <li>Cover with foil and bake.</li><br>
         <li>Let the lasagna rest before serving.</li>
     </ol>
+
+     <a href="./lasagna.html">Return to top</a><br>
+     <a href="../index.html">Return to main page</a> 
+
 </body>
 </html>
