--- a/recipes/thaitomyum.html
+++ b/recipes/thaitomyum.html
@@ -32,5 +32,8 @@
         <li>Mix in the mushrooms. Add the fish sauce, lime juice, and green chilli. Continue cooking until well blended. Remove from heat, and serve hot with the 
             coriander and basil sprinkled on top.</li><br>
     </ol>
+
+    <a href="./carbonara.html">Return to top</a><br>
+    <a href="../index.html">Return to main menu</a>
 </body>
 </html>
