--- a/recipes/carbonara.html
+++ b/recipes/carbonara.html
@@ -33,6 +33,8 @@
         <li>Cover with foil and bake.</li><br>
         <li>Let the lasagna rest before serving.</li>
     </ol>
->   
+
+     <a href="./carbonara.html">Return to top</a><br>
+     <a href="../index.html">Return to main page</a> 
 </body>
 </html>
